# FirstGameEngineInCpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  clean.bat  clean.sh  configure.sh
res/shaders/: test.frag  test.vert
src/: audio.cpp  audio.h  image.cpp  main.cpp  math.cpp  math.h  matrix4f.cpp  physics.h  quaternion.cpp  renderer.h  shader.cpp  texture.cpp  transform.cpp  vector3f.cpp  vector4f.cpp  window.cpp  window.h
src/audio/: audio.cpp  audio.h
src/display/: window.cpp  window.h
src/math/: matrix4f.cpp  quaternion.cpp  vector2f.cpp
src/render/: renderer.h  shader.cpp  vao.cpp  vbo.cpp
